--- a/training_lora_3b_ht.ipynb
+++ b/training_lora_3b_ht.ipynb
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -557,69 +557,73 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training with context_lenghts\n"
+      "Training with context_lenghts = 128\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Steps 0:  11%|█▏        | 499/4374 [00:38<04:59, 12.94it/s]\n",
-      "Validating: 100%|██████████| 75/75 [00:09<00:00,  8.05it/s, avg_loss=0.7386]\n"
+      "Steps 0:  11%|█▏        | 499/4374 [04:57<38:28,  1.68it/s]\n",
+      "Validating: 100%|██████████| 75/75 [01:09<00:00,  1.08it/s, avg_loss=0.7417]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Train loss: 1.0504\n",
-      "-> Validation loss: 0.7386\n",
+      "-> Train loss: 0.9144\n",
+      "-> Validation loss: 0.7417\n",
       "\n",
-      "Training with context_lenghts\n"
+      "Training with context_lenghts = 512\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Steps 0:  44%|████▎     | 499/1142 [02:10<02:48,  3.81it/s]\n",
-      "Validating: 100%|██████████| 75/75 [00:09<00:00,  7.57it/s, avg_loss=0.7543]\n"
+      "Steps 0:  44%|████▎     | 499/1142 [40:34<52:16,  4.88s/it]  \n",
+      "Validating: 100%|██████████| 75/75 [00:36<00:00,  2.05it/s, avg_loss=0.7457]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-> Train loss: 0.7791\n",
-      "-> Validation loss: 0.7543\n",
+      "-> Train loss: 0.8086\n",
+      "-> Validation loss: 0.7457\n",
       "\n",
-      "Training with context_lenghts\n"
+      "Training with context_lenghts = 768\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Steps 0:  55%|█████▌    | 499/900 [14:26<11:36,  1.74s/it] \n",
-      "Validating: 100%|██████████| 75/75 [00:22<00:00,  3.35it/s, avg_loss=0.7788]\n"
+      "Steps 0:   6%|▌         | 53/900 [08:15<2:12:01,  9.35s/it]\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-> Train loss: 0.9044\n",
-      "-> Validation loss: 0.7788\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Load fresh model\u001b[39;00m\n\u001b[32m     10\u001b[39m model, _ = load_qwen()\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m trained_model, final_loss = \u001b[43mtrain_lora_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlora_rank\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbest_r\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlearning_rate\u001b[49m\u001b[43m=\u001b[49m\u001b[43mbest_lr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmax_ctx_length\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrain_steps\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m500\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     13\u001b[39m val_loss, _ = evaluate_loss_perplexity_val(trained_model, tokenizer, val_texts, \u001b[32m4\u001b[39m)\n\u001b[32m     15\u001b[39m results.append({\u001b[33m\"\u001b[39m\u001b[33mcontext_lengths\u001b[39m\u001b[33m\"\u001b[39m: cl, \u001b[33m\"\u001b[39m\u001b[33mTrain Loss\u001b[39m\u001b[33m\"\u001b[39m: final_loss, \u001b[33m\"\u001b[39m\u001b[33mValidation Loss\u001b[39m\u001b[33m\"\u001b[39m: val_loss})\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/M2_Cw/src/set_up_lora.py:255\u001b[39m, in \u001b[36mtrain_lora_model\u001b[39m\u001b[34m(model, tokenizer, lora_rank, learning_rate, batch_size, max_ctx_length, train_steps)\u001b[39m\n\u001b[32m    253\u001b[39m outputs = model(batch, labels=batch)\n\u001b[32m    254\u001b[39m loss = outputs.loss\n\u001b[32m--> \u001b[39m\u001b[32m255\u001b[39m final_loss = \u001b[43mloss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    257\u001b[39m \u001b[38;5;66;03m# Backpropagation using Accelerator\u001b[39;00m\n\u001b[32m    258\u001b[39m accelerator.backward(loss)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
    "source": [
+    "results = []\n",
     "context_lengths = [128, 512, 768]\n",
     "best_r = 8\n",
     "best_lr = 1e-4\n",
     "\n",
     "for cl in context_lengths:\n",
-    "    print(f\"\\nTraining with context_lenghts\")\n",
+    "    print(f\"\\nTraining with context_lenghts = {cl}\")\n",
     "\n",
     "    # Load fresh model\n",
     "    model, _ = load_qwen()\n",
@@ -627,7 +631,7 @@
     "\n",
     "    val_loss, _ = evaluate_loss_perplexity_val(trained_model, tokenizer, val_texts, 4)\n",
     "\n",
-    "    results.append({\"context_lengths\": lr, \"Train Loss\": final_loss, \"Validation Loss\": val_loss})\n",
+    "    results.append({\"context_lengths\": cl, \"Train Loss\": final_loss, \"Validation Loss\": val_loss})\n",
     "    print(f\"-> Train loss: {final_loss:.4f}\")\n",
     "    print(f\"-> Validation loss: {val_loss:.4f}\")\n",
     "\n",
@@ -640,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +668,9 @@
     }
    ],
    "source": [
+    "\n",
     "import pandas as pd\n",
+    "\n",
     "HP_search_results_df = pd.DataFrame(results)\n",
     "print(HP_search_results_df)\n",
     "\n",
