--- a/train_val_hp_search_lora.ipynb
+++ b/train_val_hp_search_lora.ipynb
@@ -1070,131 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[tensor([[18, 13, 16,  ..., 16, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 15]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 16, 15, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 13, 18, 19]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 16, 21, 11]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 17, 13, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 22, 13, 22]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 13, 16, 17]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 17, 13, 24]], device='cuda:0'),\n",
-       " tensor([[19, 13, 21,  ..., 19, 13, 15]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 15, 15, 15]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 16,  ..., 15, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 19, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 18, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 13, 19, 19]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 17, 13, 20]], device='cuda:0'),\n",
-       " tensor([[    18,     13,     19,  ..., 151643, 151643, 151643]],\n",
-       "        device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 18, 22, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 22,  ..., 11, 18, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 16, 13, 21]], device='cuda:0'),\n",
-       " tensor([[    18,     13,     24,  ..., 151643, 151643, 151643]],\n",
-       "        device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 20, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 21, 13, 19]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 13, 21, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 23, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 15, 21, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 18, 13, 17]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 20, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 13, 15, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 16, 18, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 26, 16, 15]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 15, 15, 15]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 21, 17, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 11, 16, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 20, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 24, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 11, 18, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 15, 11, 15]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 21, 13, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 17, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[    18,     13,     23,  ..., 151643, 151643, 151643]],\n",
-       "        device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 22, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 18, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 16, 13, 23]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 24, 24, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 15, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[    18,     13,     17,  ..., 151643, 151643, 151643]],\n",
-       "        device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 19, 13, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 22, 13, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 18, 21, 11]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 19, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 20, 17, 11]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 17, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 24, 26, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 21, 24, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 24, 13, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 13, 19, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 18, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 21, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 19, 26, 24]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[    18,     13,     22,  ..., 151643, 151643, 151643]],\n",
-       "        device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 19, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 19, 13, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 19, 13, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 21, 13, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 21, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 16, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 18, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 16,  ..., 21, 13, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 16, 26, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 19, 26, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 16, 13, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 21, 26, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 20, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 22,  ..., 17, 13, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 26, 16, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 23]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 18, 13, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 21,  ..., 23, 13, 19]], device='cuda:0'),\n",
-       " tensor([[19, 13, 22,  ..., 23, 13, 24]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 21, 13, 20]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 26, 16, 21]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 26, 16, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 20, 13, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 16, 18, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 21, 13, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 13, 16, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 20, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 23]], device='cuda:0')]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_encoded_best"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1085,7 @@
     "\n",
     "for i in range(len(predicted_encoded_best)):\n",
     "    decoded_output_best = string_to_array(tokenizer.decode(predicted_encoded_best[i][0], skip_special_tokens=True))\n",
-    "    predictions_decoded_best.append(decoded_output)\n",
+    "    predictions_decoded_best.append(decoded_output_best)\n",
     "\n",
     "\n",
     "predicted_output_best = []\n",
@@ -1262,23 +1138,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'torch.Tensor'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(type(predicted_encoded_best[0]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1298,10 +1157,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.savez(\"best_model_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
-    "#MSE_loaded = np.save(\"best_model_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
-    "#np.save('best_model_results/RMSE_values_best', RMSE_values_best)\n",
-    "#np.savez(\"best_model_results/error_per_system_best.npz\", *error_per_system_best)"
+    "np.savez(\"best_model_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
+    "MSE_loaded = np.save(\"best_model_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
+    "np.save('best_model_results/RMSE_values_best', RMSE_values_best)\n",
+    "np.savez(\"best_model_results/error_per_system_best.npz\", *error_per_system_best)"
    ]
   },
   {
@@ -1571,125 +1430,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[tensor([[18, 13, 16,  ..., 17, 13, 24]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 18, 13, 15]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 26, 20, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 26, 16, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 13, 23, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 16, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 18, 11, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 24, 13, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 13, 23, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 19, 13, 23]], device='cuda:0'),\n",
-       " tensor([[19, 13, 21,  ..., 19, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 16,  ..., 15, 13, 20]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 19, 13, 15]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 19, 13, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 19, 11, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 18, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 22, 13, 21]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 20, 15, 11]], device='cuda:0'),\n",
-       " tensor([[19, 13, 22,  ..., 11, 19, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 22, 24, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 20, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 20, 13, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 15, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 23, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 20, 18, 21]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 17, 13, 23]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 21, 13, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 16, 26, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 21, 13, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 16, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 22, 13, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 13, 18, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 16, 18, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 11, 18, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 18, 17, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 24, 19, 26]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 21, 13, 17]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 17, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 16, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 11, 16, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 22, 13, 24]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 18, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 18, 13, 22]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 18, 26, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 15, 18, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 15, 19, 26]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 21, 13, 20]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 19, 13, 20]], device='cuda:0'),\n",
-       " tensor([[18, 13, 17,  ..., 22, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 11, 16, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 20, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 13, 19, 19]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 18, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 18, 24, 11]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 13, 20, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 18, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 26, 16, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 19, 13, 17]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 20, 13, 20]], device='cuda:0'),\n",
-       " tensor([[18, 13, 21,  ..., 22, 11, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 16, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 22,  ..., 11, 15, 13]], device='cuda:0'),\n",
-       " tensor([[19, 13, 17,  ..., 18, 13, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 11, 17, 13]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 16, 13, 24]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 19, 13, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 21, 13, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 20,  ..., 22, 13, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 23,  ..., 15, 23, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 16, 24, 11]], device='cuda:0'),\n",
-       " tensor([[19, 13, 16,  ..., 20, 13, 17]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 24, 13, 19]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 21, 13, 16]], device='cuda:0'),\n",
-       " tensor([[18, 13, 19,  ..., 20, 13, 23]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 24, 11, 17]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 19, 13, 18]], device='cuda:0'),\n",
-       " tensor([[19, 13, 22,  ..., 18, 13, 15]], device='cuda:0'),\n",
-       " tensor([[18, 13, 18,  ..., 16, 24, 11]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 20]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 18, 13, 17]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 13, 16, 22]], device='cuda:0'),\n",
-       " tensor([[19, 13, 21,  ..., 23, 13, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 22,  ..., 21, 13, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 21, 13, 22]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 18, 13, 21]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 26, 16, 16]], device='cuda:0'),\n",
-       " tensor([[19, 13, 18,  ..., 19, 13, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 24,  ..., 23, 23, 18]], device='cuda:0'),\n",
-       " tensor([[18, 13, 20,  ..., 20, 13, 24]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 15, 13, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 19,  ..., 21, 16, 21]], device='cuda:0'),\n",
-       " tensor([[19, 13, 15,  ..., 20, 13, 15]], device='cuda:0')]"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_encoded_best"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 96,
    "metadata": {},
    "outputs": [],
@@ -1772,14 +1512,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez(\"raw_performance_experiment_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
-    "MSE_loaded = np.save(\"raw_performance_experiment_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
-    "np.save('raw_performance_experiment_results/RMSE_values_best', RMSE_values_best)\n",
-    "np.savez(\"raw_performance_experiment_results/error_per_system_best.npz\", *error_per_system_best)"
+    "#np.savez(\"raw_performance_experiment_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
+    "#MSE_loaded = np.save(\"raw_performance_experiment_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
+    "#np.save('raw_performance_experiment_results/RMSE_values_best', RMSE_values_best)\n",
+    "#np.savez(\"raw_performance_experiment_results/error_per_system_best.npz\", *error_per_system_best)"
    ]
   },
   {
