--- a/testing_grad_clipping.ipynb
+++ b/testing_grad_clipping.ipynb
@@ -123,6 +123,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_trainable = sum(p.numel() for p in model_lora_5000.parameters() if p.requires_grad)\n",
+    "num_total = sum(p.numel() for p in model_lora_5000.parameters())\n",
+    "print(f\"Trainable params: {num_trainable}/{num_total} ({100 * num_trainable / num_total:.4f}%)\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
