need to test new early stop implementation

--- a/testing_grad_clipping.ipynb
+++ b/testing_grad_clipping.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f5b0ddc8a30>"
+       "<torch._C.Generator at 0x7f1f52764a30>"
       ]
      },
      "execution_count": 1,
@@ -69,12 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import designed functions\n",
-    "from src.set_up_lora2 import*\n",
+    "from src.set_up_lora import*\n",
     "from src.flops import*"
    ]
   },
@@ -98,7 +98,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Steps 0:   0%|          | 0/1142 [00:18<?, ?it/s]\n"
+      "Steps 0:   0%|          | 1/500 [00:12<1:45:25, 12.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Step 0] Loss: 2.4747 | Grad norm: 1.0000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Steps 0:   7%|▋         | 35/500 [03:02<40:23,  5.21s/it] \n"
      ]
     },
     {
@@ -436,7 +450,7 @@
     "import gc\n",
     "import torch\n",
     "from src.qwen import load_qwen\n",
-    "from src.set_up_lora2 import*\n",
+    "from src.set_up_lora import*\n",
     "_, val_texts, _ = load_and_preprocess(\"data/lotka_volterra_data.h5\")\n",
     "import pandas as pd"
    ]
