--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
     "    if param.requires_grad\n",
     "}\n",
     "\n",
-    "#torch.save(lora_state_dict, \"trained_lora_3a_5000/lora_weight_matrices_5000.pt\")"
+    "#torch.save(lora_state_dict, \"experiment_results/trained_lora_3a_5000/lora_weight_matrices_5000.pt\")"
    ]
   },
   {
@@ -299,10 +299,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.savez(\"trained_lora_3a_5000/predictions_decoded_trained_lora_3a.npz\", *predictions_decoded)\n",
-    "#MSE_loaded = np.save(\"trained_lora_3a_5000/MSE_values_3a.npy\", np.array(MSE_values))\n",
-    "#np.save('trained_lora_3a_5000/RMSE_values_3a', RMSE_values)\n",
-    "#np.savez(\"trained_lora_3a_5000/error_per_system_5000.npz\", *error_per_system)"
+    "#np.savez(\"experiment_results/trained_lora_3a_5000/predictions_decoded_trained_lora_3a.npz\", *predictions_decoded)\n",
+    "#MSE_loaded = np.save(\"experiment_results/trained_lora_3a_5000/MSE_values_3a.npy\", np.array(MSE_values))\n",
+    "#np.save('experiment_results/trained_lora_3a_5000/RMSE_values_3a', RMSE_values)\n",
+    "#np.savez(\"experiment_results/trained_lora_3a_5000/error_per_system_5000.npz\", *error_per_system)"
    ]
   },
   {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
     "# Saving results as a csv file\n",
     "HP_search_rlr_df = pd.DataFrame(results_rank_lr)\n",
     "print(HP_search_rlr_df)\n",
-    "HP_search_rlr_df.to_csv(\"hp_tuning_results/hp_tun_rank_lr.csv\")"
+    "#HP_search_rlr_df.to_csv(\"experiment_results/hp_tuning_results/hp_tun_rank_lr.csv\")"
    ]
   },
   {
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +875,7 @@
     "HP_search_cl_df = pd.DataFrame(results_cl)\n",
     "print(HP_search_cl_df)\n",
     "\n",
-    "HP_search_cl_df.to_csv(\"hp_tuning_results/hp_tun_cl.csv\")"
+    "#HP_search_cl_df.to_csv(\"experiment_results/hp_tuning_results/hp_tun_cl.csv\")"
    ]
   },
   {
@@ -1110,10 +1110,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#np.savez(\"best_model_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
-    "#MSE_loaded = np.save(\"best_model_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
-    "#np.save('best_model_results/RMSE_values_best', RMSE_values_best)\n",
-    "#np.savez(\"best_model_results/error_per_system_best.npz\", *error_per_system_best)"
+    "#np.savez(\"experiment_results/best_model_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
+    "#MSE_loaded = np.save(\"experiment_results/best_model_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
+    "#np.save('experiment_results/best_model_results/RMSE_values_best', RMSE_values_best)\n",
+    "#np.savez(\"experiment_results/best_model_results/error_per_system_best.npz\", *error_per_system_best)"
    ]
   },
   {
@@ -1185,7 +1185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Raw Performance experiment "
+    "# 15000 Steps Experiment"
    ]
   },
   {
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1292,12 +1292,12 @@
     }
    ],
    "source": [
-    "model_opt_train, loss_best_train = train_lora_model(model_opt, tokenizer, lora_rank=r_opt, learning_rate=lr_opt, batch_size=4, max_ctx_length=cl_opt,train_steps=30000) # Training model"
+    "model_opt_train, loss_best_train = train_lora_model(model_opt, tokenizer, lora_rank=r_opt, learning_rate=lr_opt, batch_size=4, max_ctx_length=cl_opt,train_steps=15000) # Training model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1346,7 +1346,7 @@
     "intermediate_dim = 2*d_model  # SwiGLU\n",
     "\n",
     "#  Computing total estimate of flops\n",
-    "total_flops_for_best_model = total_transformer_training_flops(30000, 4, cl_opt, num_layers, d_model, num_heads, intermediate_dim, lora_rank=r_opt)\n",
+    "total_flops_for_best_model = total_transformer_training_flops(15000, 4, cl_opt, num_layers, d_model, num_heads, intermediate_dim, lora_rank=r_opt)\n",
     "\n",
     "# collecting results\n",
     "collecting_results = [[loss_best_train, ppl_best_train, \n",
@@ -1364,7 +1364,7 @@
     "\n",
     "# Save results\n",
     "\n",
-    "best_model_results_df.to_csv(\"best_model_results/best_model_trval_loss_ppl.csv\")"
+    "#best_model_results_df.to_csv(\"experiment_results/best_model_results/best_model_trval_loss_ppl.csv\")"
    ]
   },
   {
@@ -1422,14 +1422,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez(\"raw_performance_experiment_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
-    "MSE_loaded = np.save(\"raw_performance_experiment_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
-    "np.save('raw_performance_experiment_results/RMSE_values_best', RMSE_values_best)\n",
-    "np.savez(\"raw_performance_experiment_results/error_per_system_best.npz\", *error_per_system_best)"
+    "np.savez(\"experiment_results/raw_performance_experiment_results/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
+    "MSE_loaded = np.save(\"experiment_results/raw_performance_experiment_results/MSE_values_best.npy\", np.array(MSE_values_best))\n",
+    "np.save('experiment_results/raw_performance_experiment_results/RMSE_values_best', RMSE_values_best)\n",
+    "np.savez(\"experiment_results/raw_performance_experiment_results/error_per_system_best.npz\", *error_per_system_best)"
    ]
   },
   {
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
     "\n",
     "# Save results\n",
     "\n",
-    "best_model_results_df.to_csv(\"best_model_results/best_model_trval_loss_ppl.csv\")"
+    "#best_model_results_df.to_csv(\"experiment_results/best_model_results/best_model_trval_loss_ppl.csv\")"
    ]
   },
   {
@@ -1685,14 +1685,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savez(\"10000_step_experiment/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
-    "MSE_loaded = np.save(\"10000_step_experiment/MSE_values_best.npy\", np.array(MSE_values_best))\n",
-    "np.save('10000_step_experiment/RMSE_values_best', RMSE_values_best)\n",
-    "np.savez(\"10000_step_experiment/error_per_system_best.npz\", *error_per_system_best)"
+    "#np.savez(\"experiment_results/10000_step_experiment/predictions_decoded_best.npz\", *predictions_decoded_best)\n",
+    "#MSE_loaded = np.save(\"experiment_results/10000_step_experiment/MSE_values_best.npy\", np.array(MSE_values_best))\n",
+    "#np.save('experiment_results/10000_step_experiment/RMSE_values_best', RMSE_values_best)\n",
+    "#np.savez(\"experiment_results/10000_step_experiment/error_per_system_best.npz\", *error_per_system_best)"
    ]
   },
   {
