resolving loading bar issue

--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f50142e7dd0>"
+       "<torch._C.Generator at 0x7fd6affc7dd0>"
       ]
      },
      "execution_count": 1,
@@ -100,11 +100,62 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Steps 0: 100%|██████████| 1142/1142 [04:16<00:00,  4.45it/s]\n",
-      "Steps 1142: 100%|██████████| 1142/1142 [04:16<00:00,  4.45it/s]\n",
-      "Steps 2284: 100%|██████████| 1142/1142 [04:16<00:00,  4.45it/s]\n",
-      "Steps 3426: 100%|██████████| 1142/1142 [04:16<00:00,  4.45it/s]\n",
-      "Steps 4568:  38%|███▊      | 431/1142 [01:37<02:40,  4.44it/s]\n"
+      "Training Progress Steps:   0%|          | 2/5001 [00:00<27:48,  3.00it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Step 0] Loss: 2.4747 | Grad norm: 4.2811\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training Progress Steps:  10%|█         | 502/5001 [01:51<16:39,  4.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Step 500] Loss: 1.2160 | Grad norm: 0.4036\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training Progress Steps:  20%|██        | 1002/5001 [03:44<15:07,  4.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Step 1000] Loss: 0.9821 | Grad norm: 0.6567\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training Progress Steps:  23%|██▎       | 1142/5001 [04:16<14:25,  4.46it/s]\n",
+      "Training Progress Steps:   3%|▎         | 139/5001 [00:31<18:07,  4.47it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model_lora_5000, loss_lora_5000 = \u001b[43mtrain_lora_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_qwen\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# default steps and hyper parameters are set here\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/M2_Cw/src/set_up_lora.py:256\u001b[39m, in \u001b[36mtrain_lora_model\u001b[39m\u001b[34m(model, tokenizer, lora_rank, learning_rate, batch_size, max_ctx_length, train_steps)\u001b[39m\n\u001b[32m    254\u001b[39m outputs = model(batch, labels=batch)\n\u001b[32m    255\u001b[39m loss = outputs.loss\n\u001b[32m--> \u001b[39m\u001b[32m256\u001b[39m final_loss = \u001b[43mloss\u001b[49m\u001b[43m.\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    258\u001b[39m \u001b[38;5;66;03m# Backpropagation using Accelerator\u001b[39;00m\n\u001b[32m    259\u001b[39m accelerator.backward(loss)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
