adding notebook update

--- a/train_tune_LoRA.ipynb
+++ b/train_tune_LoRA.ipynb
@@ -1530,7 +1530,8 @@
     }
    ],
    "source": [
-    "collective_plots(predicted_encoded2, tokenizer)"
+    "collective_plots(predicted_encoded2, tokenizer)\n",
+    "grad_norm_loss_plot(loss_values2, grad_norm_values2) # printing loss and grad norm over training steps"
    ]
   }
  ],
